# Chat-Engine-Builder

backend/: .gitignore  pyproject.toml
backend/app/: main.py  models.py
backend/app/engine/: chat_engine.py  settings.py
backend/app/engine/api/routers/: chat.py
backend/app/engine/index/: generate_index.py  index.py  vectordb.py
backend/app/engine/index/loaders/: __init__.py  file.py  web.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: chatEngineForm.tsx  layout.tsx  page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/components/: chat-section.tsx
frontend/src/: App.jsx
