[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ZakPorat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.0"
python-dotenv = "^1.0.1"
llama-index = "^0.10.51"
llama-index-readers-web = "^0.1.21"
pinecone-client = "^3.0.2,<4.0.0"
llama-index-embeddings-openai = "^0.1.10"
llama-index-vector-stores-pinecone = "^0.1.7"
aiostream = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
